--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
     # install python
     - name: Set up Python S{{ matrix.python-version }}
-      uses: action/setup-python@v2
+      uses: actions/setup-python@v2
       with:
         python-version: S {{ matrix.python-version }}
 
