--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt;
+        pip install -U Flask-SQLAlchemy;
 
     # run actual unit tests
     - name: Test with unittest
